# burla

./: .gitattributes  .gitignore  GROW_TUTORIAL.md  Makefile  README.md  conftest.py  demo.py  docker-compose.yml  makefile  nested_rpm_smoke.py  package-lock.json  package.json  pyproject.toml  pytest.ini
burla/: README.md  pyproject.toml
client/: pyproject.toml
client/src/burla/: __init__.py  _auth.py  _background_stuff.py  _background_threads.py  _cluster_client.py  _firestore_rest.py  _heartbeat.py  _helpers.py  _install.py  _node.py  _remote_parallel_map.py  _reporting.py
client/tests/: README.md  demo.py  joe_test.py  test.py  test_adc_auth.py  test_adc_live_integration.py  test_cli.py  test_env_vars.py  test_grow_cluster.py  test_in_local_dev.py  test_in_local_dev_mode.py  test_in_remote_dev.py  test_in_remote_dev_mode.py  test_jupyter.ipynb  test_nested_rpm.py  test_node_silence_timeout.py  test_packages.py  test_remote_dev_mode.py  test_remote_parallel_map_args_e2e.py  test_result_ack.py  test_rpm_core.py  test_rpm_exceptions.py  test_rpm_heartbeat.py  test_rpm_retries.py  test_rpm_signals.py  test_rpm_validation.py
client/tests/demo/: batch_inference.py  demo.py  demo_finished.py  temp.py  writer.py
container_service/: Dockerfile  Dockerfile.base  README.md  cloudbuild.yml  last_image_pushed_at.txt  makefile  pyproject.toml
examples/: basic.py  batch_inference.py  hp_tuning.py  makefile  pyproject.toml
examples/vector_embeddings/: Dockerfile  create_vector_db.py  demo.py  format_wikipedia.py  makefile  pyproject.toml
landing/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
main_service/: .local_cluster_last_started_at.txt  .main_svc_last_started_at.txt  Dockerfile  LICENSE  README.md  makefile  package-lock.json  pyproject.toml
main_service/frontend/: .frontend_last_built_at.txt  README.md  bun.lockb  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vite.config.ts.timestamp-1749190689450-3fe9aa6e3b94c.mjs
main_service/frontend/public/: authorized.html.j2  login.html.j2
main_service/frontend/src/: App.css  App.tsx  index.css  main.tsx  syncfusion-license.ts
main_service/frontend/src/components/: AppDataLoader.tsx  BillingPortalSettings.tsx  ClusterConfigForm.tsx  ClusterControls.tsx  ClusterNodeList.tsx  ClusterStatusCard.tsx  ErrorBoundary.tsx  JobLogs.tsx  JobsList.tsx  NodesList.tsx  ProfilePicture.tsx  ServiceAccounts.tsx  SettingsForm.tsx  Sidebar.tsx  ThemeToggle.tsx  UsageSettings.tsx
main_service/frontend/src/components/job-details/: LogViewer.tsx
main_service/frontend/src/components/ui/: accordion.tsx  alert-dialog.tsx  calendar.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  slider.tsx  switch.tsx  tabs.tsx  toggle-group.tsx  tooltip.tsx
main_service/frontend/src/contexts/: ClusterContext.tsx  JobsContext.tsx  LogsContext.tsx  NodesContext.tsx  ServiceAccountContext.tsx  SettingsContext.tsx  UsageContext.tsx
main_service/frontend/src/hooks/: use-toast.ts  useClusterControl.ts  useSaveSettings.ts
main_service/frontend/src/pages/: Filesystem.tsx  Index.tsx  JobDetails.tsx  Jobs.tsx  Settings.tsx  Storage.tsx
main_service/frontend/src/types/: cluster.ts  constants.ts  coreTypes.ts
main_service/src/main_service/: __init__.py  cluster.py  helpers.py  node.py  quota.py
main_service/src/main_service/endpoints/: client.py  cluster.py  cluster_lifecycle.py  cluster_views.py  jobs.py  settings.py  storage.py  usage.py
main_service/src/main_service/static/: authorized.html  authorized.html.j2  dashboard.html  functions.js  index.html  login.html.j2  unauthenticated.html  unauthorized.html  unauthorized.html.j2
main_service/src/main_service/static/assets/: index-0EvgW_ZM.css  index-1aNFEK1X.js  index-1zd9ANNg.js  index-4QBq_kic.js  index-7opMmV-b.js  index-8ftRka5d.js  index-ARftEar0.js  index-B-pPv0jZ.js  index-B0sKgqwe.css  index-B1xMiNq7.js  index-BDo5VZJW.css  index-BEJa1Ibo.js  index-BEoSoNf7.js  index-BHagGEiQ.css  index-BJL8J8DD.js  index-BLjUMFw8.css  index-BO94VBxj.css  index-BPjU5QGb.js  index-BTbADsh-.css  index-BWPkzDAu.css  index-BWTMV_z7.js  index-BXp0ogrv.js  index-BZxHYiyv.css  index-B_BBpxfH.css  index-B_O52Cyf.css  index-Bhg6Q4s4.js  index-BjZyRo4u.js  index-Bjk-dcPI.js  index-BkIFSgZc.css  index-Bml4fF3K.js  index-Bn4r9rFM.js  index-BrJ6KQsj.css  index-BvG3ZGCq.css  index-ByWdsbKJ.js  index-ByZgDCUt.js  index-Bz7ehAGC.js  index-BznAAsgQ.js  index-C0AeKiu_.css  index-C1L56nEK.js  index-C8ZK8qYP.css  (+111 more)
main_service/tests/: README.md  test_caches_and_auth.py  test_cluster_lifecycle.py  test_cluster_state.py  test_cluster_views.py  test_jobs_dashboard.py  test_jobs_endpoints.py  test_quota.py  test_settings.py  test_start_job.py  test_storage.py  test_usage.py
make/: cluster_dashboard_dev_state.py
node_service/: .uv.lock.icloud  Dockerfile  README.md  makefile  pyproject.toml
node_service/src/node_service/: __init__.py  endpoints.py  helpers.py  job_endpoints.py  job_watcher.py  lifecycle_endpoints.py  reboot_endpoints.py  worker.py  worker_client.py  worker_server.py
node_service/tests/: README.md  conftest.py  test_endpoints.py  test_node_service.py  test_result_ack_unit.py  test_worker_client_dynamic_ram.py
scripts/: backfill_cluster_quotas.py  dev_vm_burla_login_instructions.sh  dev_vm_client_shell.sh  dev_vm_common.sh  dev_vm_create.sh  dev_vm_destroy.sh  dev_vm_prepare_slot.sh  dev_vm_shell.sh  dev_vm_slot_acquire.sh  dev_vm_slot_release.sh  dev_vm_start.sh  dev_vm_start_local_dev.sh  dev_vm_startup.sh  dev_vm_status.sh  dev_vm_stop.sh  dev_vm_sync_repo.sh  (+2 more)
worker_service/: Dockerfile  Dockerfile.base  Dockerfile_same_env  README.md  last_image_pushed_at.txt  makefile  pyproject.toml
worker_service/src/worker_service/: __init__.py  endpoints.py  helpers.py  udf_executor.py
worker_service/tests/: README.md
(+68 files in other folders)
