[tool.poetry]
name = "burla"
version = "0.1.2-alpha"
description = "Scale your program across 1000s of computers with one line of code."
authors = ["Jake Zuliani <jake@burla.dev>"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fire = "^0.5.0"
appdirs = "^1.4.4"
requests = "^2.32.3"
yaspin = "^2.5.0"
ipython = "7.34.0"
aiohttp = "^3.8.5"
nest-asyncio = "^1.5.7"
aiolimiter = "^1.1.0"
cloudpickle = "^2.2.1"
tblib = "^3.0.0"
google-auth = "^2.31.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"

[tool.poetry.scripts]
burla = "burla.__init__:init_cli"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
