[tool.poetry]
name = "burla"
version = "0.1.2-alpha"
description = "Scale your program across 1000s of computers with one line of code."
authors = ["Jake Zuliani <jake@burla.dev>"]


[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fire = "^0.5.0"
appdirs = "^1.4.4"
requests = "^2.32.3"
yaspin = "^2.5.0"
cloudpickle = "^2.2.1"
tblib = "^3.0.0"
google-cloud-pubsub = "^2.21.1"
google-cloud-firestore = "^2.18.0"

[tool.poetry.scripts]
burla = "burla.__init__:init_cli"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
