[project]
name = "burla"
version = "1.3.12"
description = "Easy to use cluster-compute software."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "cloudpickle>=3.1.1",
    "fire>=0.7.1",
    "google-cloud-firestore>=2.21.0",
    "packaging>=25.0",
    "platformdirs>=4.5.0",
    "requests>=2.32.5",
    "six>=1.17.0",
    "tblib>=3.2.0",
    "yaspin>=3.3.0",
]

[project.scripts]
burla = "burla.__init__:init_cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burla"]

[dependency-groups]
dev = [
    "google-cloud-firestore>=2.21.0",
    "jupyterlab>=4.4.10",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]
