[project]
name = "burla"
version = "1.5.8"
description = "Easy to use cluster-compute software."
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "cloudpickle>=3.1.1",
    "fire>=0.7.1",
    "platformdirs>=4.5.0",
    "requests==2.32.4",
    "tblib>=3.2.0",
    "yaspin>=3.3.0",
]

[project.scripts]
burla = "burla.__init__:init_cli"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burla"]

[dependency-groups]
dev = [
    "anyscale>=0.26.82",
    "daft>=0.6.13",
    "delta-spark>=4.0.0",
    "diceware>=1.0.1",
    "duckdb>=1.4.1",
    "fastparquet>=2024.11.0",
    "freezegun>=1.5.1",
    "geopandas[all]>=1.1.3",
    "google-cloud-firestore>=2.21.0",
    "google-cloud-storage>=3.5.0",
    "httpx>=0.27.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.4.10",
    "kagglehub>=0.3.13",
    "mapclassify[spatial]>=2.8.1",
    "matplotlib>=3.10.7",
    "nltk>=3.9.3",
    "pandas>=2.3.3",
    "psutil>=6.0.0",
    "pyarrow>=22.0.0",
    "pyspark>=4.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.1",
    "ray>=2.53.0",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]

# Pytest configuration lives in the repo-root pytest.ini so all three
# packages and the root tests/ dir share the same conftest, markers, and
# timeout. Running `pytest client/tests/...` from the repo root picks up
# the root config automatically.
