[tool.poetry]
name = "packages-demo"
version = "0.1.0"
description = ""
authors = ["Jake Zuliani <jake@burla.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-compute = "^1.33.0"
google-auth = "^2.40.3"
google-cloud-storage = "^3.2.0"
burla = "^1.3.2"
xgboost = "^3.0.5"
scikit-learn = "^1.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
