[tool.poetry]
name = "node-service"
version = "1.2.5"
description = ""
authors = ["Jacob Zuliani <jake@burla.dev>"]
packages = [{include = "node_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
docker = "^7.1.0"
google-cloud-logging = "^3.12.1"
google-cloud-firestore = "^2.21.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
python-multipart = "^0.0.20"
aiohttp = "^3.12.11"
google-cloud-compute = "^1.31.0"
google-cloud-secret-manager = "^2.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
