[tool.poetry]
name = "worker_service"
version = "1.0.15"
description = ""
authors = ["Jacob Zuliani <jake@burla.dev>"]
packages = [{include = "worker_service", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
cloudpickle = ">=3.0"
tblib = ">=3.0"
google-cloud-logging = ">=3.8"
google-api-python-client = ">=2.147"
fastapi = ">=0.115"
uvicorn = ">=0.34"
python-multipart = ">=0.0.20"
aiohttp = ">=3.11"

# These packages are not used by the worker service
# These exist so that users can run code in burla that uses these packages
pandas = ">=2.2"
numpy = ">=2.1"
scikit-learn = ">=1.5"
google-cloud-storage = ">=2.18"
# ---------------------------------------------

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
